--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,44 @@
-.fullpage {
-    background: rgb(8, 8, 8);
+body {
+    background: rgb(8,8,8);
+}
+
+.home-outer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
+.home-inner {
+    height: 100vh;
+    width: 100%;
+    text-align: center;
+}
+
+.home-image {
+    margin: 125px 0;
+    height: calc(100% - 250px);
+}
+
+.home .home-outer {
+    overflow: hidden;
+    background-color: rgb(8,8,8);
+}
+
+.home .fullpage {
+    display: none;
+}
+
+
+
+
+.full .home-outer {
+    opacity: 0;
+    animation-name: home_page_background_animation;
+    animation-duration: 16s;
+}
+
+.full .fullpage {
     color: white;
     font-family: "Comic Sans MS";
     position: absolute;
@@ -7,8 +46,14 @@
     left: 0;
     width: 100%;
     z-index: -1;
-    /*animation-name: full_page_animation;*/
-    /*animation-duration: 16s;*/
+    display: inline;
+    animation-name: full_page_animation;
+    animation-duration: 16s;
+}
+
+.full .home-image {
+    animation-name: home_page_image_animation;
+    animation-duration: 16s;
 }
 
 .info {
@@ -16,11 +61,9 @@
 }
 
 .intro-section {
-    background-color: green;
     height: 100vh;
     width: 100%;
     text-align: center;
-    background-color: rgb(8,8,88);
 }
 
 .cover-image {
@@ -29,11 +72,9 @@
 }
 
 .intro-section-2 {
-    background-color: green;
     height: 100vh;
     width: 100%;
     text-align: center;
-    background-color: rgb(8,8,8);
 }
 
 .cover-image-2 {
@@ -51,64 +92,22 @@
     height: calc(100% - 100px);
 }
 
-.home-inner {
-    /*background-color: green;*/
-    height: 100vh;
-    width: 100%;
-    text-align: center;
-    /*background-color: rgb(8,8,8);*/
-}
 
-/*.initial-home-image {*/
-    /*margin: 125px 0;*/
-    /*height: calc(100% - 250px);*/
-/*}*/
 
-.home-image {
-    /*opacity: 0;*/
-    /*margin: 125px 0;*/
-    height: calc((100% - 300px)*0.6982);
-    margin: 150px 0;
-    /*height: calc(100% - 300px);*/
-    /*opacity: 0.5;*/
-    /*animation-name: home_page_image_animation;*/
-    /*animation-duration: 16s;*/
-    /*animation-name: example;*/
-}
-
-.home-outer {
-    color: white;
-    font-family: "Comic Sans MS";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    overflow: hidden;
-    opacity: 0.5;
-    /*opacity: 0;*/
-    /*animation-name: home_page_background_animation;*/
-    /*animation-duration: 16s;*/
-    background-color: rgb(8,8,8);
-}
-
-@keyframes full_page_animation {
-    0%   {opacity: 0;}
-    50% {opacity: 0;}
-    100% {opacity: 1;}
+@keyframes home_page_background_animation {
+    0%   {opacity: 1;}
+    50% {opacity: 1;}
+    100% {opacity: 0;}
 }
 
 @keyframes home_page_image_animation {
-    0%   {transform: rotate(0deg); opacity: 1;}
-    50% {transform: rotate(360deg); opacity: 1;}
-    100% {transform: rotate(360deg); opacity: 0;}
+    0%   {transform: rotate(0deg); opacity: 1; margin: 125px 0; height: calc(100% - 250px);}
+    50% {transform: rotate(360deg); opacity: 1; margin: 125px 0; height: calc(100% - 250px);}
+    100% {transform: rotate(360deg); opacity: 0; margin: 150px 0; height: calc((100% - 300px)*0.6982);}
 }
 
-@keyframes home_page_background_animation {
-    0%   {opacity: 1; display: inline;}
-    50% {opacity: 1; display: inline;}
-    100% {opacity: 0; display: none;}
-}
-
-p {
-    font-family: "Apple Chancery";
+@keyframes full_page_animation {
+    0%   {opacity: 0; overflow-y: hidden; height: 100%;}
+    50% {opacity: 0; overflow-y: hidden; height: 100%;}
+    100% {opacity: 1; overflow-y: auto; height: auto;}
 }
